libs/extractor/tests/snapshots/all_tests__styled_with_variable_like_emotion_props-4.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {styled} from '@devup-ui/core'\n        const isActive = true;\n        const StyledDiv = styled.div`\n          color: ${isActive ? 'red' : 'blue'};\n          opacity: ${isActive ? 1 : 0.5};\n        `\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "isActive?`red`:`blue`",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "opacity",
                level: 0,
                identifier: "isActive?1:.5",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui-0.css\";\nconst isActive = true;\nconst StyledDiv = ({ style, className, ...rest }) => <div {...rest} className={[\"a-a a-b\", className].filter(Boolean).join(\" \")} style={{\n\t...{\n\t\t\"--a\": isActive?1:.5,\n\t\t\"--b\": isActive?`red`:`blue`\n\t},\n\t...style\n}} />;\n",
}
